--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "apple-icon-72x72.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "72x72"
     },
     {
-      "src": "logo512.png",
+      "src": "apple-icon-114x114.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "114x114"
     }
   ],
   "start_url": ".",
